# pixiv2bg

./: .gitignore  Makefile  README.org  config.py  configs  pixiv2bg.py  pyproject.toml  requirements.txt  store.json  tools.py
