[tool.poetry]
name = "pixiv2bg"
version = "2.2.0"
description = "Pixiv pictures to background."
authors = ["Nasy <nasyxx+git@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
uvloop = "^0.12"
ujson = "^1.35"
aiohttp = "^3.7"
tqdm = "^4.28"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 79
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
